[package]
name = "config_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
tonic = "0.6.2"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.6.2", features = ["prost"] }
prost-build = "0.9.0"
